# PrismDB

./: .gitignore  Cargo.toml  DISTRIBUTION.md  INSTALL.md  LICENSE  MANIFEST.in  MATERIALIZED_VIEWS.md  QUICKSTART.md  README.md  README_PYTHON.md  pyproject.toml  temp_cli_section.txt
benches/: basic_benchmark.rs  tpch_bench.rs
docs/: ARCHITECTURAL_LIMITATIONS.md  ARCHITECTURE.md  BINDING_INTEGRATION_STATUS.md  CLOUD_DEPLOYMENT_ROADMAP.md  COMPREHENSIVE_GAP_ANALYSIS.md  CONTINUATION_SESSION_SUMMARY.md  DUCKDB_CPP_PORTING_PLAN.md  EXPRESSION_BINDING_NOTES.md  EXPRESSION_BINDING_TEST_SUMMARY.md  FEATURE_COMPARISON_DUCKDB_VS_DUCKDBRS.md  FEATURE_PARITY_GAP_ANALYSIS.md  HTAP_EXTENSION_SPECIFICATION.md  HTAP_EXTENSION_SPECIFICATION.md.backup  HTAP_TECHNICAL_DESIGN.md  PORTING_PLAN.md  PORTING_STATUS.md  PrismDB_vs_ApacheDrill_Whitepaper.md  PrismDB_vs_ClickHouse_Whitepaper.md  PrismDB_vs_DuckDB_Whitepaper.md  PrismDB_vs_Spanner_Whitepaper.md  README.md  SESSION_2025_11_14_AGGREGATE_COMPLETION.md  SESSION_2025_11_14_AGGREGATE_COMPLETION_PHASE2.md  SESSION_2025_11_14_COMPLETE_SUMMARY.md  SESSION_2025_11_14_COMPREHENSIVE_SUMMARY.md  SESSION_2025_11_14_CTE_SUBQUERY_INVESTIGATION.md  SESSION_2025_11_14_DATETIME_FUNCTIONS.md  SESSION_2025_11_14_FINAL_94PCT.md  SESSION_2025_11_14_PARALLEL_OPERATORS.md  SESSION_2025_11_14_QUALIFY_EXECUTION.md  SESSION_2025_11_14_SQL_FEATURES_QUALIFY.md  SESSION_2025_11_14_STRING_DATETIME_100PCT.md  SESSION_2025_11_14_STRING_FUNCTIONS.md  SESSION_2025_11_14_THIRD_PARTY_INTEGRATION.md  SESSION_2025_11_14_WINDOW_TPCH.md  SESSION_SUMMARY_PARALLEL_COMPLETE.md  STORAGE_IMPLEMENTATION_ROADMAP.md  STORAGE_IMPLEMENTATION_STATUS.md
examples/: comprehensive_demo.rs  crud_aggregate_demo.rs  debug_cte_agg.rs  debug_where_test.rs  pivot_unpivot_examples.rs  test_avg_simple.rs  test_cte_debug.rs  test_varchar_simple.rs
python_examples/: basic_usage.py  test_basic.py
scripts/: build.bat  build.sh  install.bat  install.sh  package.bat  package.sh
src/: database.rs  lib.rs  main.rs
src/catalog/: function.rs  index.rs  mod.rs  schema.rs  table.rs  transaction.rs  view.rs
src/common/: allocator.rs  constants.rs  error.rs  helper.rs  mod.rs  settings.json
src/execution/: context.rs  executor.rs  hash_table.rs  mod.rs  operators.rs  parallel.rs  parallel_operators.rs  pipeline.rs  pivot_utils.rs
src/expression/: aggregate.rs  binder.rs  datetime_functions.rs  executor.rs  expression.rs  function.rs  math_functions.rs  mod.rs  operator.rs  string_functions.rs  window.rs  window_functions.rs
src/extensions/: aws_signature.rs  config.rs  csv_reader.rs  file_reader.rs  json_reader.rs  mod.rs  parquet_reader.rs  secrets.rs  sqlite_reader.rs
src/function/scalar/list/: functions.json
src/parser/: ast.rs  keywords.rs  mod.rs  parser.rs  tokenizer.rs
src/planner/: binder.rs  logical_plan.rs  mod.rs  optimizer.rs  physical_plan.rs  planner.rs  tests.rs
src/python/: connection.rs  cursor.rs  error.rs  mod.rs  result.rs
src/storage/: block_manager.rs  buffer.rs  column.rs  mod.rs  table.rs  transaction.rs  wal.rs
src/storage/compression/: analyze.rs  dictionary.rs  mod.rs  rle.rs  traits.rs  types.rs  uncompressed.rs
src/types/: data_chunk.rs  logical_type.rs  mod.rs  physical_type.rs  value.rs  vector.rs
tests/: advanced_sql_tests.rs  arithmetic_test.rs  component_test.rs  debug_stream_test.rs  debug_test.rs  direct_executor_test.rs  empty_test.rs  end_to_end_test.rs  expression_binding_test.rs  file_database_test.rs  import_test.rs  integration_tests.rs  isolated_test.rs  iterator_stream_test.rs  materialized_views_test.rs  minimal_test.rs  nowal_test.rs  optimizer_test.rs  parallel_performance_test.rs  pivot_duckdb_ported_test.rs  pivot_unpivot_bdd_test.rs  pivot_unpivot_negative_test.rs  query_execution_tests.rs  simple_iterator_isolated_test.rs  simple_iterator_test.rs  simple_query_test.rs  simple_table_scan_test.rs  simple_test.rs  static_init_test.rs  storage_integration_tests.rs  stream_test.rs  test_deps.rs  test_minimal.rs
(+2 files in other folders)
