[package]
name = "prism"
version = "0.1.0"
edition = "2021"
authors = ["PrismDB Contributors"]
description = "A high-performance analytical database system written in Rust"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/prismdb"
keywords = ["database", "sql", "analytics", "columnar", "olap"]
categories = ["database", "data-structures"]



[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
anyhow = "1.0"
bytes = "1.11.0"    
byteorder = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = { version = "2.0.1", features = ["serde"] }

# Concurrency and async
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Compression
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", optional = true }
snap = { version = "1.1", optional = true }
flate2 = { version = "1.0", optional = true }

# Math and numerics
num-traits = "0.2"
ordered-float = "5.1.0"
rust_decimal = "1.33"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.10"

# HTTP client for file reading
reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2.5"

# CSV parsing
csv = "1.3"

# Parquet parsing
parquet = "53.2"
arrow = "53.2"

# SQLite reading
rusqlite = { version = "0.32", features = ["bundled"] }

# Statistical algorithms
tdigest = "0.2"

# String similarity
strsim = "0.11"

# Encoding
base64 = "0.22.1"

# Hash functions
twox-hash = "2.1.2"
ahash = "0.8"
md5 = "0.8.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Random number generation
rand = "0.9.2"

# Memory management
mimalloc = { version = "0.1", optional = true }

# SQL parsing
sqlparser = "0.59.0"

# File system and I/O
memmap2 = "0.9"
tempfile = "3.8"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
rustyline = "17.0.2"
dirs = "6.0.0"

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Testing
criterion = { version = "0.7.0", features = ["html_reports"] }
num_cpus = "1.17"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["compression"]
compression = ["lz4", "zstd", "snap", "flate2"]
jemalloc = ["jemallocator"]
simd = []
extensions = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

[lib]
name = "prism"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prism"
path = "src/main.rs"



[dependencies.jemallocator]
version = "0.5"
optional = true