[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prismdb"
version = "0.1.0"
description = "Python bindings for PrismDB - High Performance Analytical Database"
authors = [{name = "PrismDB Contributors"}]
readme = "README_PYTHON.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
keywords = ["database", "sql", "analytics", "columnar", "olap"]

[project.urls]
Homepage = "https://github.com/TuringWorks/PrismDB"
Repository = "https://github.com/TuringWorks/PrismDB"
Documentation = "https://github.com/TuringWorks/PrismDB/blob/master/README.md"

[tool.maturin]
features = ["python"]
module-name = "prismdb"
bindings = "pyo3"
strip = true
